# flipperzero-template

./: Cargo.toml  README.md  cargo-generate.toml
